<resources>

    <string name="app_name">Video</string>

    <string name="menu_bottom_navigation_home">Home</string>
    <string name="menu_bottom_navigation_search">Search</string>
    <string name="menu_bottom_navigation_user_content">Content</string>
    <string name="menu_bottom_navigation_settings">Settings</string>

    <string name="menu_video_dismiss">Dismiss</string>
    <string name="menu_video_share">Share</string>
    <string name="menu_video_report">Report</string>
    <string name="menu_video_play_now">Play Now</string>
    <string name="menu_video_play_next">Play Next</string>
    <string name="menu_video_add_to_queue">Add to Queue</string>
    <string name="menu_video_add_to_watch_list">Add to Watch List</string>

    <string name="menu_video_queue_remove_from_queue">Remove from Queue</string>
    <string name="menu_video_queue_add_to_watch_list">Add to Watch List</string>
    <string name="menu_video_queue_share">Share</string>

    <string name="video_info_button_like">Like</string>
    <string name="video_info_button_dislike">Dislike</string>
    <string name="video_info_button_share">Share</string>
    <string name="video_info_button_subscribe">Subscribe</string>
    <string name="video_info_button_unsubscribe">Unsubscribe</string>
    <string name="video_info_subtitle_published">Published</string>
    <string name="video_info_subtitle_category">Category</string>
    <string name="video_info_subtitle_tags">Tags</string>
    <string name="video_info_subtitle_provider">Provider</string>

    <string name="channel_info_header_about">About</string>
    <string name="channel_info_subtitle_created">Created</string>
    <string name="channel_info_subtitle_last_updated">Last Updated</string>

    <string name="search_hint">Search</string>

</resources>