<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    <TextView
            android:id="@+id/titleTextView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spacing_small"
            android:layout_marginStart="@dimen/default_horizontal_spacing"
            android:layout_marginEnd="@dimen/default_horizontal_spacing"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/expandIconImageView"
            app:layout_constraintTop_toTopOf="parent"/>

    <ImageView
            android:id="@+id/expandIconImageView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spacing_small"
            android:contentDescription="@string/cd_video_info_expand_collapse"
            android:layout_marginEnd="@dimen/default_horizontal_spacing"
            android:src="@drawable/ic_arrow_down"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
            android:id="@+id/viewCountTextView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/default_horizontal_spacing"
            android:layout_marginEnd="@dimen/default_horizontal_spacing"
            android:layout_marginTop="@dimen/spacing_xxsmall"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/titleTextView"/>

    <Button
            android:id="@+id/likeButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spacing_xsmall"
            android:layout_marginStart="@dimen/default_horizontal_spacing"
            android:layout_marginEnd="@dimen/default_horizontal_spacing"
            android:drawableTop="@drawable/ic_thumbs_up"
            android:background="@android:color/transparent"
            android:drawablePadding="@dimen/spacing_xxsmall"
            android:text="@string/video_info_button_like"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/dislikeButton"
            app:layout_constraintTop_toBottomOf="@+id/viewCountTextView"/>

    <Button
            android:id="@+id/dislikeButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spacing_xsmall"
            android:layout_marginStart="@dimen/default_horizontal_spacing"
            android:layout_marginEnd="@dimen/default_horizontal_spacing"
            android:drawableTop="@drawable/ic_thumbs_down"
            android:text="@string/video_info_button_dislike"
            android:background="@android:color/transparent"
            android:drawablePadding="@dimen/spacing_xxsmall"
            app:layout_constraintEnd_toStartOf="@+id/shareButton"
            app:layout_constraintStart_toEndOf="@+id/likeButton"
            app:layout_constraintTop_toBottomOf="@+id/viewCountTextView"/>

    <Button
            android:id="@+id/shareButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spacing_xsmall"
            android:layout_marginStart="@dimen/default_horizontal_spacing"
            android:layout_marginEnd="@dimen/default_horizontal_spacing"
            android:drawableTop="@drawable/ic_share"
            android:text="@string/video_info_button_share"
            android:drawablePadding="@dimen/spacing_xxsmall"
            android:background="@android:color/transparent"
            app:layout_constraintStart_toEndOf="@+id/dislikeButton"
            app:layout_constraintTop_toBottomOf="@+id/viewCountTextView"
            app:layout_constraintEnd_toEndOf="parent"/>

    <androidx.constraintlayout.widget.Barrier
            android:id="@+id/buttonBarrier"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:barrierDirection="bottom"
            app:constraint_referenced_ids="likeButton, dislikeButton, shareButton"/>

    <View
            android:id="@+id/buttonDivider"
            android:layout_width="0dp"
            android:layout_height="@dimen/horizontal_divider_height"
            android:background="@color/divider_color"
            android:layout_marginTop="@dimen/spacing_xsmall"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/buttonBarrier"/>

    <ImageView
            android:id="@+id/channelImageView"
            android:layout_width="@dimen/video_info_channel_image_size"
            android:layout_height="@dimen/video_info_channel_image_size"
            android:layout_marginTop="@dimen/spacing_xsmall"
            android:layout_marginStart="@dimen/default_horizontal_spacing"
            android:layout_marginEnd="@dimen/default_horizontal_spacing"
            android:contentDescription="@string/cd_video_info_channel_image"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/buttonDivider"/>

    <TextView
            android:id="@+id/channelNameTextView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spacing_xsmall"
            android:text="Channel Name"
            app:layout_constraintStart_toEndOf="@+id/channelImageView"
            app:layout_constraintTop_toBottomOf="@+id/buttonDivider"
            app:layout_constraintEnd_toStartOf="@+id/channelSubscribeButton"/>

    <Button
            android:id="@+id/channelSubscribeButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spacing_xsmall"
            android:layout_marginStart="@dimen/default_horizontal_spacing"
            android:layout_marginEnd="@dimen/default_horizontal_spacing"
            android:text="@string/video_info_button_subscribe"
            android:background="@android:color/transparent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/buttonDivider"/>

    <TextView
            android:id="@+id/channelSubscribeCountTextView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spacing_xxsmall"
            android:text="100k Subscribers"
            app:layout_constraintStart_toEndOf="@+id/channelImageView"
            app:layout_constraintEnd_toEndOf="@+id/channelSubscribeButton"
            app:layout_constraintTop_toBottomOf="@+id/channelNameTextView"/>

    <androidx.constraintlayout.widget.Barrier
            android:id="@+id/channelBarrier"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:barrierDirection="bottom"
            app:constraint_referenced_ids="channelNameTextView, channelImageView, channelSubscribeButton, channelSubscribeCountTextView"/>

    <View
            android:id="@+id/channelDivider"
            android:layout_width="0dp"
            android:layout_height="@dimen/horizontal_divider_height"
            android:background="@color/divider_color"
            android:layout_marginTop="@dimen/spacing_xsmall"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/channelBarrier"/>

    <TextView
            android:id="@+id/publishedHeaderTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/video_info_subtitle_published"
            android:layout_marginTop="@dimen/spacing_small"
            android:layout_marginStart="@dimen/default_horizontal_spacing"
            android:layout_marginEnd="@dimen/default_horizontal_spacing"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/channelDivider"/>

    <TextView
            android:id="@+id/publishedTimeTextView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spacing_small"
            android:layout_marginEnd="@dimen/default_horizontal_spacing"
            app:layout_constraintTop_toBottomOf="@+id/channelDivider"
            app:layout_constraintStart_toEndOf="@+id/publishedHeaderTextView"
            app:layout_constraintEnd_toEndOf="parent"/>

    <androidx.constraintlayout.widget.Barrier
            android:id="@+id/publishedBarrier"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:barrierDirection="bottom"
            app:constraint_referenced_ids="publishedHeaderTextView, publishedTimeTextView"/>

    <TextView
            android:id="@+id/categoryHeaderTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/video_info_subtitle_category"
            android:layout_marginTop="@dimen/spacing_small"
            android:layout_marginStart="@dimen/default_horizontal_spacing"
            android:layout_marginEnd="@dimen/default_horizontal_spacing"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/publishedBarrier"/>

    <TextView
            android:id="@+id/categoryTextView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spacing_small"
            android:layout_marginEnd="@dimen/default_horizontal_spacing"
            app:layout_constraintTop_toBottomOf="@+id/publishedBarrier"
            app:layout_constraintStart_toEndOf="@+id/categoryHeaderTextView"
            app:layout_constraintEnd_toEndOf="parent"/>

    <androidx.constraintlayout.widget.Barrier
            android:id="@+id/categoryBarrier"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:barrierDirection="bottom"
            app:constraint_referenced_ids="categoryHeaderTextView, categoryTextView"/>

    <TextView
            android:id="@+id/tagsHeaderTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/video_info_subtitle_tags"
            android:layout_marginTop="@dimen/spacing_small"
            android:layout_marginStart="@dimen/default_horizontal_spacing"
            android:layout_marginEnd="@dimen/default_horizontal_spacing"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/categoryBarrier"/>

    <TextView
            android:id="@+id/tagsTextView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spacing_small"
            android:layout_marginEnd="@dimen/default_horizontal_spacing"
            app:layout_constraintTop_toBottomOf="@+id/categoryBarrier"
            app:layout_constraintStart_toEndOf="@+id/tagsHeaderTextView"
            app:layout_constraintEnd_toEndOf="parent"/>

    <androidx.constraintlayout.widget.Barrier
            android:id="@+id/tagsBarrier"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:barrierDirection="bottom"
            app:constraint_referenced_ids="tagsHeaderTextView, tagsTextView"/>

    <TextView
            android:id="@+id/descriptionTextView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spacing_xsmall"
            android:layout_marginStart="@dimen/default_horizontal_spacing"
            android:layout_marginEnd="@dimen/default_horizontal_spacing"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tagsBarrier"/>

    <View
            android:id="@+id/descriptionDivider"
            android:layout_width="0dp"
            android:layout_height="@dimen/horizontal_divider_height"
            android:background="@color/divider_color"
            android:layout_marginTop="@dimen/spacing_small"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/descriptionTextView"/>

</androidx.constraintlayout.widget.ConstraintLayout>